--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ author:
   avatar           : "profile.png"
   bio              : "PhD Candidate, Biological & Agricultural Engineering"
   location         : "Manhattan, Kansas"
-  employer         : "Kansas State University"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  employer         : #"Kansas State University"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
