Updated Profile Picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ketan Shende"
-  avatar           : "profile.png"
+  avatar           : "50781C63-9F73-4DF0-A0D5-561049530D70.jpeg"
   bio              : "PhD Candidate, Biological & Agricultural Engineering"
   location         : "Manhattan, Kansas"
   employer         : #"Kansas State University"
